--- a/l/conf/webserv.conf
+++ b/l/conf/webserv.conf
@@ -1,9 +1,9 @@
 
 server {
   listen 8001;                        # listening port, mandatory parameter
-  host 127.0.0.1;                     # host or 127.0.0.1 by default
+  host localhost;                     # host or 127.0.0.1 by default
   server_name test;                   # specify server_name, need to be added into /etc/hosts to work
-  error_page 404 error/404.html;     # default error page
+  error_page 404 error/404.html 500 error/500.html;     # default error page
   client_max_body_size 1024;          # max request body size in bytes
   root docs/web/static;              # root folder of site directory, full or relative path, mandatory parameter
   index index.html;                   # default page when requesting a directory, index.html by default
@@ -19,11 +19,26 @@ server {
       alias  docs/fusion_web;         # replaces location part of URI.
                                       # EX: - URI /tours           --> docs/fusion_web
                                       #     - URI /tours/page.html --> docs/fusion_web/page.html
+      methods GET POST;
+  }
+
+    location cgi-bin {
+      root ./;                                                 # cgi-bin location, mandatory parameter
       cgi_path /usr/bin/python3 /bin/bash;                     # location of interpreters installed on the current system, mandatory parameter
       cgi_extension .py .sh;                                         # extensions for executable files, mandatory parameter
   }
 
-  # location cgi-bin {
-      # root ./;                                                 # cgi-bin location, mandatory parameter
-  # }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
