--- a/l/conf/default.conf
+++ b/l/conf/default.conf
@@ -3,17 +3,18 @@ server {
   listen 8001;                        # listening port, mandatory parameter
   host 127.0.0.1;                     # host or 127.0.0.1 by default
   server_name test;                   # specify server_name, need to be added into /etc/hosts to work
-  error_page 404 error/404.html;     # default error page
+  error_page 404 docs/errors/404.html;     # default error page
   client_max_body_size 1024;          # max request body size in bytes
-  root docs/web/static;              # root folder of site directory, full or relative path, mandatory parameter
+  root /home/venom/Desktop/webServer_42/l;              # root folder of site directory, full or relative path, mandatory parameter
   index index.html;                   # default page when requesting a directory, index.html by default
+  upload_path docs/uploads/;          # path to upload files, disabled by default
 
   location /tours {
-      root docs/fusion_web;           # root folder of the location, if not specified, taken from the server.
+      root /home/venom/Desktop/webServer_42/l;           # root folder of the location, if not specified, taken from the server.
                                       # EX: - URI /tours           --> docs/fusion_web/tours
                                       #     - URI /tours/page.html --> docs/fusion_web/tours/page.html
       autoindex on;                   # turn on/off directory listing
-      allow_methods POST GET;         # allowed methods in location, GET only by default
+      allow_methods POST GET DELETE;         # allowed methods in location, GET only by default
       index index.html;               # default page when requesting a directory, copies root index by default
       return abc/index1.html;         # redirection
       alias  docs/fusion_web;         # replaces location part of URI.
@@ -23,7 +24,4 @@ server {
       cgi_extension .py .sh;                                         # extensions for executable files, mandatory parameter
   }
 
-  # location cgi-bin {
-      # root ./;                                                 # cgi-bin location, mandatory parameter
-  # }
 }
