--- a/l/conf/default.conf
+++ b/l/conf/default.conf
@@ -1,7 +1,7 @@
 
 server {
   listen 8001;                        # listening port, mandatory parameter
-  host 127.0.0.1;                     # host or 127.0.0.1 by default
+  host 127.0.0.12;                     # host or 127.0.0.1 by default
   server_name test;                   # specify server_name, need to be added into /etc/hosts to work
   error_page 404 docs/errors/404.html;     # default error page
   client_max_body_size 1024;          # max request body size in bytes
@@ -13,7 +13,7 @@ server {
       root /home/venom/Desktop/webServer_42/l;           # root folder of the location, if not specified, taken from the server.
                                       # EX: - URI /tours           --> docs/fusion_web/tours
                                       #     - URI /tours/page.html --> docs/fusion_web/tours/page.html
-      autoindex on;                   # turn on/off directory listing
+      autoindex off;                   # turn on/off directory listing
       allow_methods POST GET DELETE;         # allowed methods in location, GET only by default
       index index.html;               # default page when requesting a directory, copies root index by default
       return abc/index1.html;         # redirection
